# CompaDecimal

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
compa_decimal/: Cargo.toml  README.md
compa_decimal/src/: compadecimal.rs  error.rs  lib.rs  utils.rs
compa_decimal/tests/: Integration.rs
compa_decimal_helper/: Cargo.toml
compa_decimal_helper/src/: main.rs
